--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,14 @@
 		<micrometer.version>1.10.2</micrometer.version>
 		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
 		<spring-cloud-config.version>4.0.0</spring-cloud-config.version>
+		<lombok.version>1.18.24</lombok.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -53,6 +59,14 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 			<version>${spring-cloud-config.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 	</dependencies>
 
