Login with unseen credential and JWT generator added

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,30 @@
+spring:
+  # H2 Database
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: test
+    password: test
+    driver-class-name: org.h2.Driver
+  jpa:
+    hibernate:
+      database-platform: org.hibernate.dialect.H2Dialect
+      ddl-auto: create-drop
+
 #Loggin
 logging:
   config: classpath:logback-spring-local.xml
+
+#JWT config
+jwt:
+  token:
+    secret: SecretKeyToGenerateAJSONWebTokens
+    expiration: 86400000
+    prefix: Bearer
+    header: Authorization
+    issuer:
+      info: unseen
+    authorities:
+      key: authorities
 
 management:
   endpoints:
