--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -18,7 +18,7 @@ logging:
 jwt:
   token:
     secret: SecretKeyToGenerateAJSONWebTokens
-    expiration: 86400000
+    expiration: 1
     prefix: Bearer
     header: Authorization
     issuer:
