--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<h2.version>2.1.214</h2.version>
 		<jjwt.version>0.11.5</jjwt.version>
 		<mariadb-client.version>3.1.0</mariadb-client.version>
+		<springdoc-openapi.version>2.0.2</springdoc-openapi.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -106,6 +107,17 @@
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
 			<version>${mariadb-client.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc-openapi.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
 
