Check user for login added and JWT service test added

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,6 +9,11 @@ spring:
     hibernate:
       database-platform: org.hibernate.dialect.H2Dialect
       ddl-auto: create-drop
+    properties:
+      jakarta:
+        persistence:
+          sharedCache:
+            mode: UNSPECIFIED
 
 #Loggin
 logging:
