MVC test for login and authorize added

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -5,8 +5,8 @@ logging:
 #JWT config
 jwt:
   token:
-    secret: SecretKeyToGenJWTs
-    expiration: 86400000
+    secret: SecretKeyToGenerateAJSONWebTokens
+    expiration: 10000
     prefix: Bearer
     header: Authorization
     issuer:
