Google Login Tests added

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -46,3 +46,9 @@ management:
       enabled: true
     readinessState:
       enabled: true
+
+# Social login
+social:
+  login:
+    google:
+      url: "https://content-people.googleapis.com/v1/people/me?personFields=names,emailAddresses,photos"
