--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -19,3 +19,7 @@ social:
   login:
     google:
       url: "https://content-people.googleapis.com/v1/people/me?personFields=names,emailAddresses,photos"
+    facebook:
+      url: "https://graph.facebook.com/me?fields=name,first_name,last_name,email,picture&access_token="
+      picture:
+        url: "https://graph.facebook.com/me/picture?redirect=0&height=500&type=normal&width=500&access_token="
