--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,15 @@ jobs:
       - run:
           name: Test
           command: mvn test
+      # Save test report
+      - run:
+          name: Save test results
+          command: |
+            mkdir -p ~/test-results/junit/
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/test-results/junit/ \;
+          when: always
+            - store_test_results:
+                path: ~/test-results
       # Build
       - run:
           name: Build
