--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 		<jjwt.version>0.11.5</jjwt.version>
 		<mariadb-client.version>3.1.0</mariadb-client.version>
 		<springdoc-openapi.version>2.0.2</springdoc-openapi.version>
+		<spring-social-twitter.version>1.1.2.RELEASE</spring-social-twitter.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -119,6 +120,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-twitter</artifactId>
+			<version>${spring-social-twitter.version}</version>
+		</dependency>
+
 
 
 	</dependencies>
