--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -23,3 +23,6 @@ social:
       url: "https://graph.facebook.com/me?fields=name,first_name,last_name,email,picture&access_token="
       picture:
         url: "https://graph.facebook.com/me/picture?redirect=0&height=500&type=normal&width=500&access_token="
+    twitter:
+      consumerKey: ""
+      consumerSecret: ""
