JaCoCo report added and coverall integration added

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,9 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+orbs:
+  coveralls: coveralls/coveralls@1.0.6
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
@@ -31,7 +34,8 @@ jobs:
       # Run test
       - run:
           name: Test
-          command: mvn test
+          command: mvn test jacoco:report
+      - coveralls/upload
       # Save test report
       - run:
           name: Save test results
@@ -91,3 +95,7 @@ workflows:
             - "Kubernetes cluster"
           requires:
             - build
+
+notify:
+  webhooks:
+    - url: https://coveralls.io/webhook?repo_token=$COVERALLS_REPO_TOKEN
