--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<client-certificate-data></client-certificate-data>
 		<client-key-data></client-key-data>
 		<kubernetes-user></kubernetes-user>
+		<coveralls_repo_token></coveralls_repo_token>
 		<micrometer.version>1.10.2</micrometer.version>
 		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
 		<spring-cloud-config.version>4.0.0</spring-cloud-config.version>
@@ -30,7 +31,9 @@
 		<mariadb-client.version>3.1.0</mariadb-client.version>
 		<springdoc-openapi.version>2.0.2</springdoc-openapi.version>
 		<spring-social-twitter.version>1.1.2.RELEASE</spring-social-twitter.version>
-		<jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
+		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
+		<coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+		<jaxb-api.version>2.4.0-b180830.0359</jaxb-api.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -129,7 +132,6 @@
 		</dependency>
 
 
-
 	</dependencies>
 
 	<build>
@@ -184,6 +186,21 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>${coveralls-maven-plugin.version}</version>
+				<configuration>
+					<repoToken>${coveralls_repo_token}</repoToken>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>javax.xml.bind</groupId>
+						<artifactId>jaxb-api</artifactId>
+						<version>${jaxb-api.version}</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
