--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
 				<artifactId>coveralls-maven-plugin</artifactId>
 				<version>${coveralls-maven-plugin.version}</version>
 				<configuration>
-					<repoToken>${env.COVERALLS_REPO_TOKE}</repoToken>
+					<repoToken>${env.COVERALLS_REPO_TOKEN}</repoToken>
 				</configuration>
 				<dependencies>
 					<dependency>
