--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
       # Check deployment
       - run:
           name: Check deployment
-          command: kubectl rollout status deployment unseen-auth -n unseen --kubeconfig=helm/kubeconfig
+          command: kubectl rollout status deployment unseen-auth --timeout=180s -n unseen --kubeconfig=helm/kubeconfig
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
